--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Tres en raya</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <div class="cuadrojuego">
-        <div class="titulojuego"><h1>TRES EN RAYA</h1></div>
+        <div class="titulojuego">
+            <h1>TRES EN RAYA</h1>
+        </div>
         <p id = "info" class="info"></p>
         <div class="cuadricula">
             <div id="cuadrado1" class="cuadrado"></div>
@@ -25,6 +27,6 @@
     <cursor></cursor>
     <button class="boton" id="boton-reinicio">Volver a jugar</button>
     <div class="mensaje"></div>
-    <script src="/javascript/scripts.js"></script>
+    <script src="./javascript/scripts.js"></script>
 </body>
 </html>
